[gd_scene load_steps=2 format=3 uid="uid://ds2ve8rcv3pnn"]

[ext_resource type="Script" path="res://src/minigames/end_minigame/end_minigame.gd" id="1_ykb8w"]

[node name="EndMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykb8w")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -843.0
offset_top = -260.0
offset_right = 843.0
offset_bottom = 260.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 120
text = "W \"Masce\" Stanisława Lema robot główny bohater został zaprogramowany z określonym celem. Jaki to był cel?"
horizontal_alignment = 1
autowrap_mode = 1

[node name="Button1" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "A) Ochrona królestwa przed wrogami.
"

[node name="Button2" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "B) Odkrycie prawdy o swojej tożsamości.
"

[node name="Button3" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "C) Uśmiercenie księcia Arrhodesa
"

[node name="Button4" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "D) Zbudowanie najdoskonalszej maszyny świata."
